# music_player_v2

./: .clang-format  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FileBrowserView.final.info  FileBrowserView.info  FileBrowserView.new.info  NowPlayingView.final.info  NowPlayingView.info  NowPlayingView.new.info  PagedFileSelector.info  README.md  build.sh  build_production.sh  debug_connection.py  download_imgui.sh  imgui.ini  library.json  mock_server.py  playlist_Favorites.json  playlist_Now Playing.json  playlist_abc.json  playlist_abcd.json  playlist_e.json  playlist_g.json  playlist_method_to_add.txt  playlists.json  rebuild.sh  s32k_firmware_example.c  test_adc_btn  test_adc_btn.cpp  test_tcp_client  test_tcp_client.cpp
assets/icons/: heart_filled.tga  heart_outline.tga  next.tga  pause.tga  play.tga  prev.tga  repeat.tga  repeat_all.tga  repeat_off.tga  repeat_one.tga
build_verify/: compile_commands.json
data/: config.json  library.data  library.json  playlist_Favorites.data  playlist_Favorites.json  playlist_c.json  playlist_d.json  playlist_f.json  playlists.json
docs/: BUILD.md
docs/00_Requirement/: req.txt  req_vie.txt
docs/01_SRS/: srs_clarifications.md  srs_v1.0.md
docs/02_Design/: FileInfo_Relationships.md  architecture_diagrams.md  architecture_review.md  architecture_review_final.md  comprehensive_review_analysis.md  critical_fixes.md  diagram_updates.md  library_usage_guide.md  threading_and_ownership.md
docs/examples/: s32k_firmware_example.c
docs/images/: .$arch.drawio.bkp  .$arch.drawio.dtmp  arch.drawio  arch.drawio.xml
inc/app/: Application.h
inc/app/controller/: HistoryController.h  LibraryController.h  PlaybackController.h  PlaylistController.h  PlaylistTrackListController.h  USBController.h
inc/app/model/: History.h  Library.h  MediaFile.h  MediaFileFactory.h  PlaybackState.h  Playlist.h  PlaylistManager.h
inc/app/view/: BaseView.h  FileBrowserView.h  HistoryView.h  LibraryView.h  MainWindow.h  NowPlayingView.h  PlaylistView.h  TrackListView.h  ViewFactory.h
inc/app/view/components/: PagedFileSelector.h
inc/hal/: S32K144Interface.h
inc/interfaces/: IFileSystem.h  IHardwareInterface.h  IMetadataReader.h  IObserver.h  IPersistence.h  IPlaybackEngine.h  ISubject.h  ITrackCollection.h  ITrackListController.h  IView.h  IViewFactory.h
inc/service/: HybridMetadataReader.h  JsonPersistence.h  LocalFileSystem.h  MpvMetadataReader.h  MpvPlaybackEngine.h  SDL2PlaybackEngine.h  TagLibMetadataReader.h
inc/utils/: Config.h  Logger.h  Subject.h
scripts/: draw_icons  draw_icons.cpp  generate_icons.py
src/: main.cpp
src/app/: Application.cpp
src/app/controller/: HistoryController.cpp  LibraryController.cpp  PlaybackController.cpp  PlaylistController.cpp  USBController.cpp
src/app/model/: History.cpp  Library.cpp  MediaFile.cpp  MediaFileFactory.cpp  PlaybackState.cpp  Playlist.cpp  PlaylistManager.cpp
src/app/view/: BaseView.cpp  FileBrowserView.cpp  HistoryView.cpp  LibraryView.cpp  MainWindow.cpp  NowPlayingView.cpp  PlaylistView.cpp  ViewFactory.cpp
src/app/view/components/: PagedFileSelector.cpp
src/hal/: LinuxHardware.cpp  S32K144Interface.cpp
src/service/: HybridMetadataReader.cpp  JsonPersistence.cpp  LocalFileSystem.cpp  MpvMetadataReader.cpp  MpvPlaybackEngine.cpp  SDL2PlaybackEngine.cpp  TagLibMetadataReader.cpp
src/utils/: Config.cpp  Logger.cpp  Subject.cpp
tests/assets/: sample.flac
tests/integration/: ApplicationIntegrationTest.cpp  ConfigTest.cpp  FileServicesTest.cpp  MetadataTest.cpp
tests/mocks/: MockFileSystem.h  MockMetadataReader.h  MockPersistence.h  MockPlaybackEngine.h  MockTrackListController.h
tests/unit/: ApplicationTest.cpp  BaseViewTest.cpp  ConfigTest.cpp  DummyTest.cpp  FileBrowserViewTest.cpp  HistoryControllerTest.cpp  HistoryTest.cpp  HistoryViewTest.cpp  HybridMetadataReaderTest.cpp  JsonPersistenceTest.cpp  LibraryControllerTest.cpp  LibraryTest.cpp  LibraryViewTest.cpp  LocalFileSystemTest.cpp  LoggerTest.cpp  MainWindowTest.cpp  MediaFileFactoryTest.cpp  MediaFileTest.cpp  MetadataDefaultsTest.cpp  MpvPlaybackEngineTest.cpp  NowPlayingViewTest.cpp  PagedFileSelectorTest.cpp  PlaybackControllerTest.cpp  PlaybackEngineInterfaceTest.cpp  PlaybackErrorTest.cpp  PlaybackStateTest.cpp  PlaylistControllerTest.cpp  PlaylistManagerTest.cpp  PlaylistTest.cpp  PlaylistTrackListControllerTest.cpp  PlaylistViewTest.cpp  SubjectTest.cpp  TagLibMetadataReaderTest.cpp  TrackListViewTest.cpp  USBControllerTest.cpp
